<resources>
    <string name="app_name">Fact cards</string>
    <string name="create">Create</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="file_name_empty_error">File name is empty</string>
    <string name="file_already_exists_error">File already exists</string>
    <string name="create_fact_card">Create fact card</string>
    <string name="delete_line">Delete line</string>
    <string name="delete_fact_card">Delete fact card</string>
    <string name="edit_card_text">Edit card text</string>
    <string name="increase_font">Increase font</string>
    <string name="decrease_font">Decrease font</string>
    <string name="drawing">Drawing</string>
    <string name="enter_card_new_text">Enter card\'s new text</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="fact_card_colors">Fact card colors</string>
    <string name="background_color">Background color</string>
    <string name="fact_card_bg_color">Fact card background color</string>
    <string name="fact_card_border_color">Fact card border color</string>
    <string name="card_point_color">Fact card point color</string>
    <string name="card_selected_point_color">Fact card selected point</string>
    <string name="line_colors">Line colors</string>
    <string name="line_color">Line color</string>
    <string name="selected_line_color">Selected color line</string>
    <string name="fact_card_text_color">Fact card text color</string>
    <string name="reset">Reset</string>
    <string name="reset_color_settings">Reset color settings to default</string>
    <string name="save">Save</string>
    <string name="image_saved_to_gallery">Image saved to gallery</string>
    <string name="does_not_have_permissions_to_write_files">Does not have permissions to write files</string>
    <string name="failed_to_create_file">Failed to create file</string>
    <string name="delete">Delete</string>
    <string name="file_deleted">File deleted</string>
    <string name="undo">Undo</string>
</resources>